--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <div>Logo</div>
-            <button>sign up</button>
-        </nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+    <div class="container">
+      <nav>
+        <div class="navbar">
+          <div class="logo">Logo</div>
+          <button class="sing-up-btn button-style">sign up</button>
+        </div>
+      </nav>
+
+      <div class="hero">
+        <p>
+          Cool Dark UI Template for <br />
+          WebfLow Agencies!
+        </p>
+        <button class="hero-btn">Stay Focused</button>
+      </div>
+     </div>
+
     </header>
-    <main>
 
-    </main>
-    <footer>
 
-    </footer>
-</body>
+
+
+
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
