--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <div class="navbar">
           <div class="logo">Logo</div>
-          <button class="sing-up-btn button-style">sign up</button>
+          <button class="sign-up-btn">sign up</button>
         </div>
       </nav>
 
@@ -31,7 +31,20 @@
 
 
 
-    <main></main>
+    <main>
+        <section class="action">
+
+
+            <div class="action-info">
+            <h2>See It in Action</h2>
+            <p>Explore the live preview and imagine your <br>  brand in this bold </p>
+            <button>Launch Live Preview</button>
+            </div>
+            <div class="action-img">
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
