user feedback added

--- a/index.html
+++ b/index.html
@@ -8,42 +8,140 @@
   </head>
   <body>
     <header class="header">
-    <div class="container">
-      <nav>
-        <div class="navbar">
-          <div class="logo">Logo</div>
-          <button class="sign-up-btn">sign up</button>
+      <div class="container">
+        <nav>
+          <div class="navbar">
+            <div class="logo">Logo</div>
+            <button class="sign-up-btn">sign up</button>
+          </div>
+        </nav>
+
+        <div class="hero">
+          <p>
+            Cool Dark UI Template for <br />
+            WebfLow Agencies!
+          </p>
+          <button class="hero-btn">Stay Focused</button>
         </div>
-      </nav>
-
-      <div class="hero">
-        <p>
-          Cool Dark UI Template for <br />
-          WebfLow Agencies!
-        </p>
-        <button class="hero-btn">Stay Focused</button>
       </div>
-     </div>
-
     </header>
 
-
-
-
-
     <main>
-        <section class="action">
-
-
-            <div class="action-info">
-            <h2>See It in Action</h2>
-            <p>Explore the live preview and imagine your <br>  brand in this bold </p>
-            <button>Launch Live Preview</button>
+      <section class="action">
+        <div class="action-info">
+          <h2>See It in Action</h2>
+          <p>
+            Explore the live preview and imagine your <br />
+            brand in this bold
+          </p>
+          <button>Launch Live Preview</button>
+        </div>
+        <div class="action-img">
+          <img src="Assets/wc-mini.png" alt="" />
+        </div>
+      </section>
+      <section class="user-container">
+        <div class="user-details">
+          <div class="user-details-title">
+            <h1>Joined Thousands of productive user</h1>
+          </div>
+          <div class="user-status">
+            <div class="status">
+              <p class="first-status">50k</p>
+              <p class="second-status">Active User</p>
             </div>
-            <div class="action-img">
-                <img src="Assets/wc-mini.png" alt="">
+            <div class="status">
+              <p class="first-status">2M+</p>
+              <p class="second-status">Focus Session</p>
             </div>
-        </section>
+            <div class="status">
+              <p class="first-status">95%</p>
+              <p class="second-status">satisfaction Rate</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="feedback-section">
+        <h1 class="feedback-title">What our user say</h1>
+        <div class="feedback-container">
+          <div class="feedback-card">
+            <div class="rating-feedback">
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+            </div>
+            <div class="reviewer">
+              <div class="feedback-text">
+                <h2>Loved by Designers</h2>
+                <p>
+                  This template leveled up our <br />
+                  presence."-Studio Vertex
+                </p>
+              </div>
+              <div class="reviewer-details">
+                <img src="Assets/avatar.png" alt="" />
+                <div class="reviewer-bio">
+                  <p class="reviewer-name">Reviewer name</p>
+                  <p>Date</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="feedback-card">
+            <div class="rating-feedback">
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+            </div>
+            <div class="reviewer">
+              <div class="feedback-text">
+                <h2>Loved by Designers</h2>
+                <p>
+                  This template leveled up our <br />
+                  presence."-Studio Vertex
+                </p>
+              </div>
+              <div class="reviewer-details">
+                <img src="Assets/avatar.png" alt="" />
+                <div class="reviewer-bio">
+                  <p class="reviewer-name">Reviewer name</p>
+                  <p>Date</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="feedback-card">
+            <div class="rating-feedback">
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+              <img src="Assets/icon-star.png" alt="star" />
+            </div>
+            <div class="reviewer">
+              <div class="feedback-text">
+                <h2>Loved by Designers</h2>
+                <p>
+                  This template leveled up our <br />
+                  presence."-Studio Vertex
+                </p>
+              </div>
+              <div class="reviewer-details">
+                <img src="Assets/avatar.png" alt="" />
+                <div class="reviewer-bio">
+                  <p class="reviewer-name">Reviewer name</p>
+                  <p>Date</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
