--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
           </div>
         </div>
       </section>
+
+
+      
+      <section class="input-section">
+        <div class="input-title"><h1>Let's Get in Touch</h1></div>
+        <div class="input-container">
+          <form>
+            <label for="email">Email</label>
+            <input type="email" placeholder="Your Email" name="email">
+
+            <label for="fullname">Name</label>
+            <input type="text" placeholder="full name" name="fullname">
+            <label for="massage">massage</label>
+            <textarea name="massage" id="" cols="40" rows="10"></textarea>
+          </form>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
