--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <img src="Assets/wc-mini.png" alt="" />
         </div>
       </section>
+
       <section class="user-container">
         <div class="user-details">
           <div class="user-details-title">
@@ -143,8 +144,6 @@
         </div>
       </section>
 
-
-
       <section class="input-section">
         <div class="input-title"><h1>Let's Get in Touch</h1></div>
         <div class="form-section">
@@ -160,6 +159,21 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    
+    <footer>
+      <section class="footer-section">
+        
+      <span class="logo-2">LOGO</span>
+      <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life</p>
+      <ul>
+        <li><a href="#"></a>home</li>
+        <li><a href="#"></a>about</li>
+        <li><a href="#"></a>how it works</li>
+        <li><a href="#"></a>services</li>
+      </ul>
+
+      </section>    
+    </footer>
   </body>
 </html>
