--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
           <div class="navbar">
             <div class="logo">Logo</div>
-            <button class="sign-up-btn">sign up</button>
+            <button class="sign-up-btn btn-hover">sign up</button>
           </div>
         </nav>
 
@@ -21,7 +21,7 @@
             Cool Dark UI Template for <br />
             WebfLow Agencies!
           </p>
-          <button class="hero-btn">Stay Focused</button>
+          <button class="hero-btn btn-hover">Stay Focused</button>
         </div>
       </div>
     </header>
@@ -34,7 +34,7 @@
             Explore the live preview and imagine your <br />
             brand in this bold
           </p>
-          <button>Launch Live Preview</button>
+          <button class="btn-hover">Launch Live Preview</button>
         </div>
         <div class="action-img">
           <img src="Assets/wc-mini.png" alt="" />
@@ -154,7 +154,7 @@
             <input type="text" placeholder="full name" name="fullname">
             <label for="massage">massage</label>
             <textarea name="massage" id="" cols="40" rows="10"></textarea>
-            <button class="get-touch">Get in Touch</button>
+            <button class="get-touch btn-hover">Get in Touch</button>
           </form>
         </div>
       </section>
