--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hero">
           <p>
             Cool Dark UI Template for <br />
-            WebfLow Agencies!
+            Webflow Agencies!
           </p>
           <button class="hero-btn btn-hover">Stay Focused</button>
         </div>
@@ -142,6 +142,13 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="extra-section">
+        <h2>Ready to focus better</h2>
+        <p>this template instantly leveled up our  presence."- studio Vertex</p>
+        <button class="btn-hover">Get Started Free</button>
+        <img src="Assets/wc-big.png" alt="">
       </section>
 
       <section class="input-section">
